# CodeGuard

./: LICENSE  README.md  analyzer.py  c.py  clean.py  codeguard.py  error.py  eyy.py  javacode  last_results.json  module1.py  module1_report.csv  module1_report.json  module2.json  module2.py  module2_ai_review.json  module3.py  module3_metrics.csv  module3_metrics.json  pre-commit  py.py  pyproject.toml  quality_analyzer.py  quality_analyzer.py.py  quality_report.csv  quality_report.json  streamlit_app.py  test_with_issues.py
.github/workflows/: code-quality.yml  codeguard.yml
.gitlab/: ci.yml
analyzers/: c_analyzer.py  cpp_analyzer.py  javascript_analyzer.py  python_analyzer.py
codeguard/: __main__.py  analyzer.py  dispatcher.py  module1.py  module2.py  module3.py
codeguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
presentation/: Documentation.docx
uploaded_files/: clean.py  javacode.py  manual_input.c  manual_input.java
